Replaced -verbose:gc with -XX:+PrintGCDetails.